[package]
name = "tf-libp2p"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.26"
async-trait = "0.1"
either = "1.8.1"
libp2p-relay = "0.15.0"
tokio = { version = "1.8", features = ["macros", "fs", "rt", "rt-multi-thread", "sync", "io-util"] }
log = "0.4.17"
serde = "1.0.152"
bson = "2.5.0"
thiserror = "1.0.39"

[dependencies.libp2p]
version = "0.51.0"
default-features = false
features = ["full"]
