[package]
name = "tf-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
'tf-stellar' = { path = "../stellar" }
'tf-libp2p' = { path = "../libp2p" }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }
